--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: rouhim/sons-of-the-forest-server
     build:
       context: .
+      dockerfile: Containerfile
     volumes:
       - "./config:/config"
       - "./data:/data"
