feat: disable auto merge for docker

--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,8 @@
   "packageRules": [
     {
       "matchManagers": ["dockerfile"],
-      "matchUpdateTypes": ["major", "minor", "patch"]
+      "matchUpdateTypes": ["major", "minor", "patch"],
+      "automerge": false
     },
     {
       "matchUpdateTypes": [
