feat: improve readme, add restart behaviour for docker compose file, set SkipNetworkAccessibilityTest always to true

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: .
       dockerfile: Containerfile
+    restart: unless-stopped
     volumes:
       - "./config:/config"
       - "./data:/data"
