--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -74,7 +74,7 @@ jobs:
         run: |
           mkdir -p config/ data/
           chmod 777 config/ data/
-          timeout 10m bash test-image.sh
+          timeout 10m bash .github/workflows/test-image.sh
 
       - name: Build and push container image
         if: github.ref == 'refs/heads/main'
