feat: add scheduled security audits status

--- a/.github/workflows/scheduled-security-audit.yaml
+++ b/.github/workflows/scheduled-security-audit.yaml
@@ -16,7 +16,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Trivy vulnerability scanner
+      - name: Audit container image (print to console)
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'docker.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}'
+          format: 'table'
+          exit-code: '0'
+
+      - name: Audit container image (save to github security tab)
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'docker.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}'
@@ -38,7 +45,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Trivy vulnerability scanner
+      - name: Audit repo filesystem (print to console)
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          format: 'table'
+          exit-code: '0'
+
+      - name: Audit repo filesystem (save to github security tab)
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
