--- a/container-data/Containerfile
+++ b/container-data/Containerfile
@@ -21,7 +21,7 @@ RUN apt update && \
 RUN dpkg --add-architecture i386 && \
     apt update && \
     apt install -y --no-install-recommends wine wine32 wine64 winbind xvfb && \
-    apt upgrade -y && apt dist-upgrade -y
+    apt upgrade -y
 
 # Cleanup, remove wget
 RUN apt remove -y wget && \
