fix: data type in docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Containerfile
     restart: unless-stopped
     environment:
-      FAST_BOOT: false
+      FAST_BOOT: "false"
     volumes:
       - "./config:/config"
       - "./data:/data"
