fix: use modern ENV key=value format in Containerfile

--- a/container-data/Containerfile
+++ b/container-data/Containerfile
@@ -9,8 +9,8 @@ RUN apt-get update && \
 
 USER $USER
 
-ENV STEAM_APP_ID "2465200"
-ENV STARTUP_COMMAND "wine SonsOfTheForestDS.exe -userdatapath $SERVER_CONFIG_DIR"
+ENV STEAM_APP_ID="2465200"
+ENV STARTUP_COMMAND="wine SonsOfTheForestDS.exe -userdatapath $SERVER_CONFIG_DIR"
 
 # Game port
 EXPOSE 8766/udp
